<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/name_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/device_name"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:layout_toRightOf="@id/name_tip"
            android:textSize="16sp"
            android:layout_toEndOf="@id/name_tip" />

        <Button
            android:id="@+id/connect_btn"
            android:onClick="onClick"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_connect"
            android:textSize="16sp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_tip"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/lux_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/sun"/>
        <TextView
            android:id="@+id/lux_tip"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@id/lux_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/lux"
            android:textSize="16sp"
            android:layout_toEndOf="@id/lux_icon" />
        <TextView
            android:id="@+id/lux_value"
            android:layout_toRightOf="@id/lux_tip"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lux_value"
            android:textSize="16sp"
            android:layout_toEndOf="@id/lux_tip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/temp_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/temperature"/>
        <TextView
            android:id="@+id/temp_tip"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@id/temp_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/temp"
            android:textSize="16sp"
            android:layout_toEndOf="@id/temp_icon" />
        <TextView
            android:id="@+id/temp_value"
            android:layout_toRightOf="@id/temp_tip"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_value"
            android:textSize="16sp"
            android:layout_toEndOf="@id/temp_tip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/hum_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/humidity"/>
        <TextView
            android:id="@+id/hum_tip"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@id/hum_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/hum"
            android:textSize="16sp"
            android:layout_toEndOf="@id/hum_icon" />
        <TextView
            android:id="@+id/hum_value"
            android:layout_toRightOf="@id/hum_tip"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hum_value"
            android:textSize="16sp"
            android:layout_toEndOf="@id/hum_tip" />
    </RelativeLayout>

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stat_tip"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/stat"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/stat_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_stat"
            android:textColor="@color/colorLightRed"
            android:textSize="16sp"
            android:layout_toEndOf="@id/stat_tip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/stop"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:text="@string/stop"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/get"
            android:onClick="onClick"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/get"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>