<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_centerVertical="true"
            android:id="@+id/progress"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/search_textView"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanning"/>

        <Button
            android:id="@+id/scan_btn"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/paired_devices_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairedDevices"
            android:textSize="16sp"/>
        <View
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/paired_devices_tip"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:padding="10dp"
        android:id="@+id/paired_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/discover_devices_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_device"
            android:textSize="16sp"/>
        <View
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/discover_devices_tip"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:padding="10dp"
        android:id="@+id/discover_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>